# AI-SRE-Squad

./: README.md
LangGraph/: graph.py  run.py  state.py
LangGraph/agents/: db_reliability_agent.py  manager_agent.py  network_reliability_agent.py  supervisor_agent.py  system_resource_agent.py
MCP_test/postgresql_mcp/: mcp_client.py
MCP_test/slack_mcp/mcp_server/: test_agent.py
MCP_test/slack_mcp/slack_bot/: test.py
SRE/: .gitignore  MVP_SUMMARY.md  NOTION_DOC.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  quick_demo.py  test_mvp.py
SRE/.war-room-test/: tier-config.json  tier.json
SRE/docker/: Dockerfile.manager  Dockerfile.mcp-base  Dockerfile.test-mcp  docker-compose.yml  entrypoint.sh
SRE/docs/: AUTO_CONTAINER_MANAGEMENT.md  DOCKER_GUIDE.md  MVP_DESIGN.md  QUICKSTART.md
SRE/scripts/: build_test_images.bat  build_test_images.sh
SRE/src/: __init__.py  container_orchestrator.py  dynamic_mcp_manager.py  integrated_war_room.py  mcp_catalog.py  problem_analyzer.py  tier_manager.py  war_room.py
SRE/tests/: test_integrated_mvp.py  test_no_docker.py  test_quick.py
client-server/: client.py  pyproject.toml
path/to/your/app/: agent.py  langgraph.json
slack_mcp/: test_agent.py
warroom-mcp/: TESTING_GUIDE.md  docker-compose.test.yml  pyproject.toml  quick_test.py
warroom-mcp/src/warroom_mcp_server/: docker_tools.py  main.py  server.py
warroom-mcp/tests/: test_logging_config.py  test_main.py  test_mcp_2025_direct.py  test_mcp_2025_features.py  test_mcp_protocol_compliance.py  test_server.py  test_tools.py
weather/: pyproject.toml  weather.py
