[project]
name = "war-room-2.0-mvp"
version = "0.2.0"
description = "Dynamic MCP-based War Room 2.0 - Production MVP"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.1.2",
    "httpx>=0.27.0",
    "pydantic>=2.10.3",
    "docker>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "black>=24.11.1",
    "ruff>=0.8.4",
]
