[project]
name = "docker_mcp_server"
version = "0.1.0"
description = "War Room - AI SRE Squad MCP Server for DevOps Crisis Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.21.0",
    "prometheus-api-client",
    "python-dotenv",
    "pyproject-toml>=0.1.0",
    "requests",
    "structlog>=23.0.0",
    "fastmcp>=2.11.3",
    "docker>=7.1.0",
    "psutil>=6.1.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "docker>=7.0.0",
    "requests>=2.31.0",
]

[project.scripts]
warroom-mcp-server = "warroom_mcp_server.main:run_server"

[tool.setuptools]
packages = ["warroom_mcp_server"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src/prometheus_mcp_server"]
omit = ["*/__pycache__/*", "*/tests/*", "*/.venv/*", "*/venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.json]
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
